--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <div class="personal-header">
                     <img src="resources/img/profile_pic2.png" alt="Profile picture">
                     <h1>Đoàn Thục Huyền</h1>
-                    <p>Software Engineer</p>
+                    <p>Financial Analyst</p>
                 </div>
                 <div class="personal-details">
                     <div class="personal-info">
                         <ion-icon name="mail"></ion-icon>
-                        <a href="mailto:rjbasitali@gmail.com" target="_blank">rjbasitali@gmail.com</a>
+                        <a href="mailto:thuchuyend@gmail.com" target="_blank">thuchuyend@gmail.com</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="call"></ion-icon>
