--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
             <div class="col span-1-of-3 personal">
                 <div class="personal-header">
-                    <img src="resources/img/profile_pic2.png" alt="Profile picture">
+                    <img src="a41b652f-d9c6-4ad7-9318-563b3fd332f8.jpg" alt="Profile picture">
                     <h1>Đoàn Thục Huyền</h1>
                     <p>Financial Analyst</p>
                 </div>
