--- a/index.html
+++ b/index.html
@@ -34,25 +34,21 @@
                     </div>
                     <div class="personal-info">
                         <ion-icon name="call"></ion-icon>
-                        <a href="tel:0923348054216" target="_blank">+92 334 8054216</a>
+                        <a href="tel:0964233288" target="_blank">+84 964 233 288</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="logo-linkedin"></ion-icon>
-                        <a href="https://www.linkedin.com/in/rjbasitali/" target="_blank">rjbasitali</a>
+                        <a href="https://www.linkedin.com/in/thuc-huyen-doan-7b16392b5/" target="_blank">doanthuchuyen</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="logo-github"></ion-icon>
-                        <a href="https://github.com/rjbasitali" target="_blank">rjbasitali</a>
-                    </div>
-                    <div class="personal-info">
-                        <ion-icon name="globe-outline"></ion-icon>
-                        <a href="https://rjbasitali.com" target="_blank">rjbasitali.com</a>
+                        <a href="https://github.com/doanthuchuyen/thuchuyen07.github.io" target="_blank">doanthuchuyen</a>
                     </div>
 
                     <h3>Education</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">BS in Software Engineering</p>
-                        <p class="personal-ed-light">University of Karachi<br>2012 - 2015</p>
+                        <p class="personal-ed-bold">BA in Investment Economics</p>
+                        <p class="personal-ed-light">University of Ho Chi Minh City<br>Expected Graduation: 2027<br>GPA: 3.32/4</p>
                     </div>
                     <div class="personal-ed">
                         <p class="personal-ed-bold">Intermediate (Pre-Engineering)</p>
