--- a/index.html
+++ b/index.html
@@ -50,14 +50,10 @@
                         <p class="personal-ed-bold">BA in Investment Economics</p>
                         <p class="personal-ed-light">University of Ho Chi Minh City<br>Expected Graduation: 2027<br>GPA: 3.32/4</p>
                     </div>
-                    <div class="personal-ed">
-                        <p class="personal-ed-bold">Intermediate (Pre-Engineering)</p>
-                        <p class="personal-ed-light">PECHS College Karachi<br>2006 - 2008</p>
-                    </div>
 
                     <h3>Languages</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">Urdu <span>(Native)</span></p>
+                        <p class="personal-ed-bold">Vietnamese <span>(Native)</span></p>
                         <p class="personal-ed-bold">English <span>(Professional)</span></p>
                     </div>
 
