--- a/index.html
+++ b/index.html
@@ -57,13 +57,19 @@
                         <p class="personal-ed-bold">English <span>(Professional)</span></p>
                     </div>
 
-                    <h3>Interests</h3>
+                    <h3>Technical Skills</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-light">Digital Painting</p>
-                        <p class="personal-ed-light">Football</p>
-                        <p class="personal-ed-light">Swimming</p>
-                        <p class="personal-ed-light">Games</p>
+                        <p class="personal-ed-light">Financial statement analysis</p>
+                        <p class="personal-ed-light">Investment appraisal</p>
+                        <p class="personal-ed-light">Basic portfolio management</p>
+                        <p class="personal-ed-light">Basic knowledge of Python and Power BI for analysis</p>
                     </div>
+                    <h3>Soft Skills</h3>
+                    <div class="personal-ed">
+                        <p class="personal-ed-light">Problem-solving</p>
+                        <p class="personal-ed-light">Teamwork</p>
+                        <p class="personal-ed-light">Presentation skill</p>
+                        <p class="personal-ed-light">Time management</p>
 
                 </div>
             </div>
