--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <p class="personal-ed-light">Teamwork</p>
                         <p class="personal-ed-light">Presentation skill</p>
                         <p class="personal-ed-light">Time management</p>
+                    </div>
 
                 </div>
             </div>
